CNSDEVCOLECT/force-app/main/default/objects/Master_Base_Logger__c/Master_Base_Logger__c.object-meta.xml
<CustomObject>
    <label>Master Base Logger</label>
    <nameField>
        <displayFormat>MB-{00000000}</displayFormat>
        <label>Master Base Logger Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Base Logger</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>