CNSDEVCOLECT/force-app/main/default/objects/Master_Base_Logger__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>External Id para busquedas</description>
    <externalId>true</externalId>
    <label>Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>