CNSDEVCOLECT/force-app/main/default/objects/Master_Base_Logger__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Id de caso relacionado</description>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Master Base Logger</relationshipLabel>
    <relationshipName>Master_Base_Logger</relationshipName>
    <type>Lookup</type>
</CustomField>