CNSDEVCOLECT/force-app/main/default/objects/Master_Base_Logger__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Flag para identificar si estado del correo. Valore por defecto = Pendiente</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendiente</fullName>
                <default>true</default>
                <label>Pendiente</label>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>